2002-02-13  Dan Lewis <dihlewis@yahoo.co.uk>

	* SerializationInfoEnumerator.cs: New file (stub)

2002-02-12  Duncan Mak  <duncan@ximian.com>
	
	* SerializationBinder.cs: Implemented.
	* SerializationEntry.cs: Implemented.
	* SerializationInfo.cs: Fixed the get portion of the AssemblyName
	property. Implemented the FullTypename property.
	
2002-01-06  David Dawkins <david@dawkins.st>

	* IFormatter.cs : New file
	* ISerializationSurrogate.cs : New file
	* ISurrogateSelector.cs : New file

2002-05-01  Ravi Pratap  <ravi@ximian.com>

	* SerializationInfo.cs : Insert MonoTODO attribute.

2001-08-24  Nick Drochak  <ndrochak@gol.com>

	* IDeserializationCallback.cs: New File

Wed Nov 14 17:03:30 CET 2001 Paolo Molaro <lupus@ximian.com>

	* IFormatterConverter.cs, SerializationInfo.cs: CLSCompliant updates.

Fri Nov 2 18:40:12 CET 2001 Paolo Molaro <lupus@ximian.com>

	* SerializationException.cs: implemented.

2001-08-24  Nick Drochak  <ndrochak@gol.com>

	* SerializationInfo.cs: Added all the public methods so that the compile would not break

2001-07-20  Miguel de Icaza  <miguel@ximian.com>

	* SerializationInfo.cs: New file.

	* IFormatterConverter.cs: New file.

	* ISerializable.cs: New file.
	
