@@ -1,3 +1,11 @@
+2002-02-15  Duncan Mak  <duncan@ximian.com>
+
+	* SerializationEntry.cs: Added internal constructor for writing
+	bits for SerializationInfoEnumerator.
+	* SerializationInfo.cs: Completed.
+	* SerializationInfoEnumerator.cs: Implemented. Piggybacking on
+	Hashtable's GetEnumerator method.
+
 2002-02-13  Dan Lewis <dihlewis@yahoo.co.uk>
 
 	* SerializationInfoEnumerator.cs: New file (stub)
